[gd_scene load_steps=18 format=3 uid="uid://cymi8puqyx10m"]

[ext_resource type="Script" path="res://components/scripts/Witchcraft_Projectile.gd" id="1_gjp6w"]
[ext_resource type="Texture2D" uid="uid://pjhe0wnau24a" path="res://components/sprites/enemies/lich/lich_witchcraft_effect.png" id="2_kd70y"]
[ext_resource type="Texture2D" uid="uid://bkcg36ttdeanw" path="res://components/sprites/enemies/lich/lich_explosions_effect.png" id="3_ql0cg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6lcp"]
atlas = ExtResource("2_kd70y")
region = Rect2(0, 0, 1500, 1500)

[sub_resource type="AtlasTexture" id="AtlasTexture_le5jo"]
atlas = ExtResource("2_kd70y")
region = Rect2(1500, 0, 1500, 1500)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bwia"]
atlas = ExtResource("2_kd70y")
region = Rect2(0, 1500, 1500, 1500)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cr5w"]
atlas = ExtResource("3_ql0cg")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_13igy"]
atlas = ExtResource("3_ql0cg")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao404"]
atlas = ExtResource("3_ql0cg")
region = Rect2(1200, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_goht3"]
atlas = ExtResource("3_ql0cg")
region = Rect2(0, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_so12p"]
atlas = ExtResource("3_ql0cg")
region = Rect2(600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf3vy"]
atlas = ExtResource("3_ql0cg")
region = Rect2(1200, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl2s"]
atlas = ExtResource("3_ql0cg")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_asf3k"]
atlas = ExtResource("3_ql0cg")
region = Rect2(600, 1200, 600, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ubdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6lcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le5jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bwia")
}],
"loop": true,
"name": &"effect",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cr5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13igy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao404")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goht3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so12p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf3vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asf3k")
}],
"loop": false,
"name": &"impact",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l4qwa"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nfri"]
radius = 8.0
height = 56.0

[node name="Witchcraft_Projectile" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_gjp6w")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(0.11, 0.11)
sprite_frames = SubResource("SpriteFrames_1ubdb")
animation = &"effect"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(33, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_l4qwa")
disabled = true

[node name="Time_to_live" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Area_to_impact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_to_impact"]
position = Vector2(14, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7nfri")
debug_color = Color(0.862745, 0.133333, 0.133333, 0.0666667)

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="timeout" from="Time_to_live" to="." method="_on_time_to_live_timeout"]
[connection signal="body_entered" from="Area_to_impact" to="." method="_on_area_to_impact_body_entered"]
